--- a/style.css
+++ b/style.css
@@ -612,4 +612,11 @@ footer p
     font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif; 
     line-height: 25px;
 }
+
+.g_map iframe {
+    width: 100%;
+    height: 600px;
+    border: 0;
+}
+
 /*--------------------------------------------CATERING---------------------------------------*/
